--- a/assign.html
+++ b/assign.html
@@ -38,7 +38,7 @@
     </head>
     <body>
         <div class="container">
-            <form action="#" onsubmit="reloadIssue(event)">
+            <form action="#">
             <br>
             <br>
             <br>
@@ -49,23 +49,20 @@
                     <input type="text" id="name" name="name" required><br>
                     <label for="email">E-Mail :</label><br>
                     <input type="email" id="email" name="email" required><br>
-                    <label for="pass">Password :</label><br>
-                    <input type="password" id="pass" name="pass" required><br>
+                    <label for="num">Phone Number :</label><br>
+                    <input type="tel" id="num" name="num" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required><br>
                     <label for="date">Date :</label><br>
                     <input type="datetime-local" id="date" name="date" ><br>
                     <button type="button" id="btn" class="btn btn-primary">Schedule a call</button>
 
                     <div class="msg"></div>
-                    <ul>
-                        <li class = "red">This should be red</li>
-                        <li class = "green">This should be green</li>
-                    </ul>
+                    <ul id="display"></ul>
                 </fieldset>
             </div>
             <br>
             <br>
             <br>
-            <button id="info" class="btn btn-info">Contact</button><br>
+            <button id="info" type = "button" class="btn btn-info">Contact</button><br>
             <div class="info"></div>
             </form>
         </div>
